tests/rosetta/out/Java/100-doors.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:31:34Z
// 100-doors.mochi
import java.util.*;

public class M100Doors {
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    List<Object> doors = new ArrayList<>(Arrays.asList());
    for (int i = 0; i < 100; i++) {
        doors.add(false);
    }
    for (int pass = 1; pass < 101; pass++) {
        int idx = pass - 1;
        while (idx < 100) {
            doors.set(idx, !doors.get(idx));
            idx = (int)(idx + pass);
        }
    }
    for (int row = 0; row < 10; row++) {
        String line = "";
        for (int col = 0; col < 10; col++) {
            int idx = row * 10 + col;
            if (doors.get(idx)) {
                line = line + "1";
            }
            else {
                line = line + "0";
            }
            if (col < 9) {
                line = line + " ";
            }
        }
        System.out.println(line);
    }
    }
}
